Avoid gap to support safari

--- a/src/components/MaModal/MaModal.css
+++ b/src/components/MaModal/MaModal.css
@@ -24,7 +24,6 @@
   justify-content: space-between;
   align-items: flex-start;
   padding: var(--spacing-medium);
-  gap: var(--spacing-medium);
   border-radius: 4px 4px 0 0;
 }
 
@@ -57,6 +56,7 @@
   border-style: solid;
   border-width: 1px;
   padding: 0.25rem;
+  margin-left: var(--spacing-medium);
   color: var(--modal-header-icon-color);
 }
 
